# catmull-clark-proto

./: CMakeLists.txt
src/: main.cpp  starter0_util.h  tuple.h
vecmath/: Vector3f.cpp
